			   XPCE ChangeLog
			   ==============

* ADDED: optional argument to `device->clear' to force destruction of the
  erased objects.


VERSION 6.1.2, distributed with SWI-Prolog 5.1.2
================================================

* PORT: MS-Windows Moved from winsock-1 to winsock-2

* FIXED: memory leak due to error in recent change in incremental GC.

* MODIFIED: termToObject() translates Prolog floats that happen to be
  integer into an XPCE real object.  Petter Egesund.


VERSION 6.1.1, distributed with SWI-Prolog 5.1.1
================================================

* INSTALL: Remove .qlf files when installing new libraries to avoid version
  conflicts.

* ADDED: Optional `ignore-case' argument to `char_array->equal'.  Used in
  text_item completion.

* MODIFIED: renamed module of library(http_client) to pce_http_client

* FIXED: Windows: text repaint to use int rather than short for very large
  scrolled objects.  Petter Egesund.

* FIXED: `file<-read_line' no longer has a limit on the line-length and
  reads lines holding 0-bytes.  Anjo Anjewierden.

* PORT: Make the windows version thread-safe.

* CLEANUP: Deleted death code accessing plterm.dll functions.

* ENHANCED: Various issues around the diagramming class plot_axis.  Fully
  compatible.

VERSION 6.0.10, distributed with SWI-Prolog 5.0.10
==================================================

* FIXED: below mentioned memory-management fixes, causing new problems in
  especially the source-level debugger.  Wouter Jansweijer and a few
  related messages.

* ADDED/FIXED: named attributes to class float_item and checking low/high
  in the stepper functions of this class.


VERSION 6.0.10a, distributed with SWI-Prolog 5.0.10a
====================================================

* FIXED: memory-management problem in `code-referenced' objects.  This
  can be the cause of some hard-to-reproduce crashes.

* FIXED/ENHANCED: Max size of a string is increased from 16MB to 128MB